Add login page
Add Google_Logo.png and Github.png assets
LoginPage component displayed only when the token cookie exist
Logout button present in the header when a user is connected
